Made code strictly Java 8 compliant.